# ListeningTo

./: .dockerignore  .gitignore  Dockerfile  README.md
macos-swift/: Info.plist  Package.swift  build_app.sh
macos-swift/Sources/ListeningTo/: DiscordIPC.swift  MusicReader.swift  main.swift
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: discord_rpc.rs  lib.rs  media_reader.rs
